--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,16 +1,20 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Rubik:wght@400;500&display=swap');
 
-
-*{
-    font-family: 'Poppins', sans-serif;
-    font-size: 16px;
-    line-height: 18px;
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
-    color: #5D6970;
+* {
+  font-family: 'Rubik', sans-serif;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 16px;
+  color: #000000;
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+  /* background-color: red; */
+  border-style: none;
+  border: none;
+  cursor: pointer;
 }
 
-a{
-    text-decoration: none;
+a {
+  text-decoration: none;
 }
