--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3,7 +3,7 @@
 * {
   font-family: 'Rubik', sans-serif;
   font-style: normal;
-  font-weight: 500;
+  font-weight: 400;
   font-size: 16px;
   color: #000000;
   padding: 0;
@@ -16,4 +16,15 @@
 
 a {
   text-decoration: none;
+}
+
+.page-enter-active,
+.page-leave-active {
+  transition: transform 0.5s;
+}
+
+.page-enter,
+.page-leave-active {
+  opacity: 0;
+  transform: translateY(100%);
 }
